--- a/css/style.css
+++ b/css/style.css
@@ -1217,3 +1217,37 @@ height: 100%;
     opacity: 1;
     pointer-events: auto;
 }
+
+
+/* card slider */
+
+.card-slider {
+  padding: 0 40px !important;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  width: 250px;
+  height: 320px;
+  border: none;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+  position: relative;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.4s ease;
+}
+
+/* Hover zoom effect */
+.card:hover img {
+  transform: scale(1.05);
+}
