--- a/css/style.css
+++ b/css/style.css
@@ -76,9 +76,10 @@
 }
 
 .btn.btn-primary:hover {
-    background: #1b457f !important;
-    color: #e25169 !important;
-    border: 1px solid #e25169 !important ;
+    background: #ffffff00 !important;
+    color: #1b457f !important;
+    font-weight: bold;
+    border: 2px solid #1b457f !important ;
 }
 
 
@@ -169,15 +170,15 @@ h4, h5, h6, .h4, .h5, .h6 {
 }
 
 .btn.btn-secondary{
-    background: #f79400 !important;
-    color: #000000;
-    border: 1px solid #000000;
+    background: #1b457f !important;
+    color: #ffffff;
+    border: 1px solid #e25169;
 }
 
 .btn.btn-secondary:hover{
-    background: #1d1d1d !important;
-    color: var(--bs-primary) !important;
-    border: 1px solid var(--bs-primary) !important ;
+    background: #e25169 !important;
+    color: #1b457f !important;
+    border: 1px solid #ffffff !important ;
 }
 
 .btn {
@@ -1222,7 +1223,7 @@ height: 100%;
 /* card slider */
 
 .card-slider {
-  padding: 0 40px !important;
+  padding: 0 60px !important;
 }
 
 .swiper-slide {
@@ -1231,8 +1232,8 @@ height: 100%;
 }
 
 .card {
-  width: 250px;
-  height: 320px;
+  width: 240px;
+  height: 370px;
   border: none;
   border-radius: 12px;
   overflow: hidden;
@@ -1250,4 +1251,29 @@ height: 100%;
 /* Hover zoom effect */
 .card:hover img {
   transform: scale(1.05);
+}
+
+
+
+
+
+/* eee */
+.partner-card2 {
+    height: 330px; /* adjust as needed */
+    overflow: hidden;
+  }
+  
+  .partner-img2 {
+    height: 100%;
+    object-fit: cover;
+  }
+
+
+  .partner-card2:hover .partner-img2 {
+    
+    filter: blur(3px) brightness(1.5);
+}
+.partner-card2:hover .partner-overlay {
+    opacity: 1;
+    pointer-events: auto;
 }
