--- a/css/style.css
+++ b/css/style.css
@@ -1223,7 +1223,7 @@ height: 100%;
 /* card slider */
 
 .card-slider {
-  padding: 0 60px !important;
+  padding: 0 45px !important;
 }
 
 .swiper-slide {
@@ -1273,6 +1273,8 @@ height: 100%;
   height: 100%;
   object-fit: cover;
   transition: filter 0.4s ease;
+  border-radius: 10px;
+ 
 }
 
 /* Hover effects */
@@ -1329,10 +1331,13 @@ height: 100%;
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .partner-card2 {
+    padding: 0;
     height: 250px;
     margin-top: 10px;
+    border-radius: 10px;
   }
 
+  
   .partner-overlay h6 {
     font-size: 1rem;
   }
@@ -1347,6 +1352,7 @@ height: 100%;
   .partner-card2 {
     height: 200px;
     margin-bottom: 10px;
+    border-radius: 10px;
   }
 
   .partner-overlay h6 {
@@ -1358,3 +1364,93 @@ height: 100%;
     padding: 5px 12px;
   }
 }
+
+
+
+/* extra card */
+  .shop-card {
+    height: 200px;
+      position: relative;
+      background-color: #1b1e3a;
+      color: white;
+      text-align: center;
+      padding: 30px 20px;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+
+    .shop-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .shop-card i {
+      font-size: 40px;
+      color: orange;
+      margin-bottom: 15px;
+    }
+
+    .shop-card h5 {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    .shop-card p {
+      margin-bottom: 15px;
+      color: #ccc;
+    }
+
+    .shop-card .btn {
+      background-color: #ff6600;
+      border: none;
+      color: white;
+      
+    }
+
+    .shop-card .btn:hover {
+      background-color: #ff8533;
+    }
+
+    /* Glass Hover Overlay */
+    .card-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(255, 255, 255, 0.521);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      opacity: 0;
+      visibility: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .shop-card:hover .card-overlay {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .overlay-text {
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 992px) {
+      .col-lg-2 {
+        flex: 0 0 33.3333%;
+        max-width: 33.3333%;
+      }
+    }
+
+    @media (max-width: 576px) {
+      .col-lg-2 {
+        flex: 0 0 100%;
+        max-width: 100%;
+      }
+    }
