--- a/css/style.css
+++ b/css/style.css
@@ -1369,6 +1369,11 @@ height: 100%;
 
 /* extra card */
 
+.container2{
+    height: 50vh !important;
+    z-index: 2000;
+}
+
 .endcorosal{
      width: 100%;
       height: 100%;
@@ -1586,3 +1591,71 @@ height: 100%;
         width: 80vw;
       }
     }
+
+
+
+
+    /* super script
+     */
+
+.card2 {
+  width: 100%;
+  height: 360px;
+  transform-style: preserve-3d;
+  perspective: 500px;
+  position: relative;
+  border: none;
+  background-color: inherit;
+}
+
+.card2 .box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+  transform-style: preserve-3d;
+  transition: 0.5s;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card2 .box.front {
+  background-color: #ccc;
+}
+
+.card2 .box.back {
+  transform: rotateY(180deg);
+  background: #fff;
+}
+
+.card2:hover .box.front {
+  transform: rotateY(180deg);
+}
+.card2:hover .box.back {
+  transform: rotateY(360deg);
+}
+
+/* Explore button */
+.explore-btn {
+  background: #262626;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 30px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  transition: background 0.3s ease;
+}
+
+.explore-btn:hover {
+  background: #000;
+}
+
+@media(max-width: 575.98px) {
+  .card2 {
+    height: 300px;
+  }
+}
