--- a/css/style.css
+++ b/css/style.css
@@ -1598,15 +1598,15 @@ height: 100%;
     /* super script
      */
 
-.card2 {
-  width: 100%;
-  height: 360px;
-  transform-style: preserve-3d;
-  perspective: 500px;
-  position: relative;
-  border: none;
-  background-color: inherit;
-}
+     .card2 {
+      width: 100%;
+      aspect-ratio: 1 / 1; /* Makes it a perfect square */
+      position: relative;
+      transform-style: preserve-3d;
+      perspective: 500px;
+      border: none;
+      background-color: inherit;
+    }
 
 .card2 .box {
   position: absolute;
@@ -1659,4 +1659,22 @@ height: 100%;
   .card2 {
     height: 300px;
   }
+}
+
+
+
+
+/* end
+ */
+
+
+ .blinking-border {
+  animation: blinkShadow 1s infinite;
+  border-radius: 8px;
+}
+
+@keyframes blinkShadow {
+  0%   { box-shadow: 0 0 0 0 #1b457f; }
+  50%  { box-shadow: 0 0 10px 4px #1b457f; }
+  100% { box-shadow: 0 0 0 0 #1b457f; }
 }
